--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mio-mongo",
   "description": "MongoDB storage plugin for Mio.",
-  "version": "0.3.1",
+  "version": "0.4.0",
   "homepage": "https://github.com/mio/mongo",
   "author": {
     "name": "Alex Mingoia",
@@ -32,7 +32,8 @@
     "test": "./node_modules/gulp/bin/gulp.js test"
   },
   "dependencies": {
-    "mio": "^1.0.3",
+    "async": "^0.9.0",
+    "mio": "^1.0.4",
     "mongodb": "^1.4.22"
   },
   "devDependencies": {
