--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "test": "./node_modules/gulp/bin/gulp.js test"
   },
   "dependencies": {
-    "async": "^0.9.0",
+    "async": "^1.0.0",
     "mio": "^1.2.0",
-    "mongodb": "^1.4.30"
+    "mongodb": "^2.0.33"
   },
   "devDependencies": {
     "chai": "^1.9.1",
@@ -42,11 +42,10 @@
     "gulp-clean": "^0.3.1",
     "gulp-coveralls": "^0.1.3",
     "gulp-instrument": "^0.1.0",
-    "gulp-jshint": "^1.9.2",
+    "gulp-jsdoc-to-markdown": "^1.1.1",
     "gulp-mocha": "^2.0.0",
-    "jsdoc-to-markdown": "^0.5.11",
-    "jshint-stylish": "^1.0.0",
-    "mocha-lcov-reporter": "0.0.1",
+    "gulp-rename": "^1.2.2",
+    "mocha-lcov-reporter": "0.0.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0"
   },
